# AISDE_working

aisde_l2/: AISDE_2_104_MIKOŁAJCZYK_PIOTR.docx  Wstawianie_optymistyczny.txt  ZOA._pesymistyczny.m  ZOA_optymistyczny.m  Zlozonosc_czasowa.fig  Zlozonosc_czasowa_loglog.fig  Zlozonosc_czasowa_optymistyczna_loglog.fig  babelki.txt  babelki_optymistyczny.txt  operacja_kopiowania.fig  operacje_dodawania.fig  operacje_dodawania_optymistyczne.fig  porownania.fig  porownania_optymistyczne.fig  wstawianie.txt  wstawianie_l_operacji_vs_licznosc.fig  ~$SDE_2_104_MIKOŁAJCZYK_PIOTR.docx
aisde_l2/Cwicz23/: CMakeLists.txt
aisde_l2/__MACOSX/Cwicz23/: ._makefile  ._src
aisde_l2/__MACOSX/Cwicz23/src/: ._badanie_alg_sort-drzewa.hpp  ._badanie_alg_sort-std.hpp  ._control.h  ._control_drzewa.h  ._control_sort-std.h  ._main.cpp
aisde_l2/__MACOSX/Cwicz23/src/algorytmy_drzewa/bst/: ._bst.h
aisde_l2/__MACOSX/Cwicz23/src/algorytmy_sort_std/: ._sortowanie.h  ._sortowanie.hpp
aisde_l2/__MACOSX/Cwicz23/src/narzedzia/: ._error.h  ._iterator.h  ._statystyka.h  ._stos.h
aisde_l2/__MACOSX/Cwicz23/src/struktury/: ._object.h  ._vertex.h
aisde_l3/: AISDE_3_104_MIKOŁAJCZYK_PIOTR.docx  Czas.fig  Dodawania - Optymistyczny i pesymistyczny.fig  Dzielenia - Optymistyczny i pesymistyczny.fig  Kopiowania_pesymistyczny.fig  MixedSort_optymistyczny.txt  MixedSort_pesymistyczny.txt  Porownania - Optymistyczny i pesymistyczny.fig  ZOA.m  test.txt  tournamentSortLeft_1_optymistyczny.txt  tournamentSortLeft_1_pesymistyczny.txt  tournamentSortLeft_Complex_optymistyczny.txt  tournamentSortLeft_Complex_pesymistyczny.txt  tournamentSortLeft_optymistyczny.txt  tournamentSortLeft_pesymistyczny.txt  ~$SDE_2_104_MIKOŁAJCZYK_PIOTR.docx
aisde_l3/aisde_l3/src/: control_drzewa.h
aisde_l4/: AISDE_4_104_MIKOŁAJCZYK_PIOTR.docx  Comp_complex.m  Comparisions.fig  Copyings.fig
aisde_l4/Kolejka/src/headers/: SmartDataTable.h
aisde_l4/Kolejka/src/sources/: main.cpp
aisde_l5/: 3D1.eps  AISDE_5_104_MIKOŁAJCZYK_PIOTR.docx  CZASY.txt  makefile
aisde_l5/Sources/: Complexity.py
aisde_l5/Sources/Common/: Exception.cpp  Exception.h
aisde_l5/Sources/Digraphgen/: Digraphgen.cpp
aisde_l5/Sources/Graphgen/: Graphgen.cpp
aisde_l5/Sources/MST/: Edge.cpp  Edge.h  Forest.cpp  Forest.h  Graph.cpp  Graph.h  MST_Algorithms.cpp  MST_Algorithms.h  MST_Main.cpp  MST_Utils.cpp  MST_Utils.h
aisde_l5/Sources/Minpath/: AbstractGraph.h  DistanceTable.cpp  DistanceTable.h  HalfEdge.h  HeapPQ.cpp  HeapPQ.h  List.h  ListDigraph.cpp  ListDigraph.h  ListElement.h  MatrixDigraph.cpp  MatrixDigraph.h  MinpathConfig.cpp  MinpathConfig.h  MinpathMain.cpp  MinpathUtils.cpp  MinpathUtils.h  Vertex.h
aisde_l6/: AISDE_6_104_MIKOŁAJCZYK_PIOTR.docx  config.txt  graf.txt  makefile
aisde_l6/Sources/: Config.cpp  Config.h  Graph.cpp  Graph.h  Graphgen.cpp  Optim.cpp  RNG.h  Utils.h
(+25 files in other folders)
